--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,9 @@
 body {
-    background: #5f5f5f;
-};
+  position: relative;
+  top: 10px;
+  left: 10px;
+  display: inline;
+  width: 50px;
+  background: #5f5f5f;
+
+}
