--- a/src/assets/scss/base/_index.scss
+++ b/src/assets/scss/base/_index.scss
@@ -1,4 +1,4 @@
-@forward './normalize';
-@forward './fonts';
-@forward './vars';
-@forward './main';
+@import './normalize';
+@import './fonts';
+@import './vars';
+@import './main';
