--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,3 +1,6 @@
-@forward './mixins';
-@forward './base';
-@forward './globals';
+@import './mixins';
+@import './base';
+@import './globals';
+
+// components
+@import './components/header';
