--- a/src/assets/scss/base/vars.scss
+++ b/src/assets/scss/base/vars.scss
@@ -1,16 +1,41 @@
 :root {
     // neutral colors
-    --neutral-colors-10: #fff;
-    --neutral-colors-20: #f5f5f5;
-    --neutral-colors-60: #18181d;
-    --neutral-colors-100: #1d1e25;
-    
+    --neutral-color-10: #fff;
+    --neutral-color-20: #f5f5f5;
+    --neutral-color-60: #18181d;
+    --neutral-color-100: #1d1e25;
+    --neutral-color-120: #828282;
+    --neutral-color-130: #d9d9d9;
+    --neutral-color-140: #000;
+
+    // primary colors
+    --primary-color-50: #4e7ddb;
+
+    // logo colors
+    --logo-color-text: #101010;
+    --logo-color-circle: #101010;
+
     // container
-    --container-padding: 15px;
+    --container-padding-calc: 15px;
+    --container-padding: 0 var(--container-padding-calc);
     --container-width: 1200px;
+
+    // transition
+    --transition: 0.2s ease-in-out;
+
+    // z-index
+    --z-index-1: 1;
+    --z-index-2: 2;
+    --z-index-3: 3;
+    --z-index-4: 4;
 }
 
-[data-them='dark'] {
-    --neutral-colors-10: #1d1e25;
-    --neutral-colors-100: #fff;
+[data-theme='dark'] {
+    --neutral-color-10: #1d1e25;
+    --neutral-color-100: #fff;
+    --neutral-color-140: #fff;
+
+    // logo colors
+    --logo-color-text: #fff;
+    --logo-color-circle: #343542;
 }
