--- a/src/assets/scss/mixins/_index.scss
+++ b/src/assets/scss/mixins/_index.scss
@@ -1,4 +1,4 @@
-@forward './font-face';
-@forward './flex';
-@forward './burger';
-@forward './media';
+@import './font-face';
+@import './flex';
+@import './burger';
+@import './media';
