Created hero section and fixed header

--- a/src/assets/scss/base/main.scss
+++ b/src/assets/scss/base/main.scss
@@ -13,9 +13,16 @@ html {
 }
 
 .body {
+    position: relative;
     overflow-x: hidden;
     color: var(--neutral-color-100);
     background-color: var(--neutral-color-10);
+
+    &--fixed {
+        overflow-y: hidden;
+    }
+
+    
 }
 
 img {
@@ -61,7 +68,9 @@ button {
 .container {
     margin: 0 auto;
     padding: var(--container-padding);
-    max-width: calc(var(--container-width) + (var(--container-padding-calc) * 2));
+    max-width: calc(
+        var(--container-width) + (var(--container-padding-calc) * 2)
+    );
 }
 
 .hidden {
