--- a/src/assets/scss/components/home/hero.scss
+++ b/src/assets/scss/components/home/hero.scss
@@ -19,7 +19,7 @@
         height: 551px;
         background: #fa7515;
         filter: blur(220px);
-
+        
         @include mini-desktop {
             left: 80px;
             width: 351px;
@@ -30,13 +30,14 @@
             width: 250px;
             height: 250px;
         }
-
+        
         @include small-mobile {
-            width: 150px;
-            height: 150px;
+            width: 10px;
+            height: 10px;
         }
     }
-
+    
+    
     &::after {
         right: 0;
         bottom: 0;
@@ -49,6 +50,7 @@
             width: 321px;
             height: 321px;
         }
+
     }
 
     &::before,
@@ -202,13 +204,19 @@
 
         @include mini-desktop {
             top: -10px;
-            right: -100px;
+            right: -90px;
         }
 
         @include mobile {
             top: -10px;
-            right: -20px;
+            right: 30px;
             max-width: 173px;
+        }
+
+        @include small-mobile {
+            top: -1px;
+            right: -1px;
+            max-width: 133px;
         }
 
         &-title {
@@ -247,7 +255,7 @@
         }
 
         &-body {
-            &-th {
+            &-td {
                 font-weight: 700;
                 font-size: 20px;
                 line-height: 130%;
@@ -260,7 +268,6 @@
 
             &-num {
                 display: inline-block;
-                margin-left: 6px;
                 font-weight: 600;
                 font-size: 14px;
                 line-height: 143%;
