--- a/src/assets/scss/components/home/hero.scss
+++ b/src/assets/scss/components/home/hero.scss
@@ -249,7 +249,7 @@
         }
 
         &-body {
-            &-td {
+            &-th {
                 font-weight: 700;
                 font-size: 20px;
                 line-height: 130%;
