--- a/src/html/components/home/hero.html
+++ b/src/html/components/home/hero.html
@@ -20,6 +20,7 @@
             <div class="hero__sales">
                 <h3 class="hero__sales-title">Sales Report</h3>
                 <img
+                    loading="lazy"
                     class="hero__sales-img"
                     src="./assets/icons/sales-report-icon.svg"
                     width="366"
@@ -30,6 +31,7 @@
             <div class="hero__customer">
                 <h3 class="hero__customer-title">Customer Growth</h3>
                 <img
+                    loading="lazy"
                     src="./assets/icons/customer-growth-icon.svg"
                     width="177"
                     height="149"
