Created sterength and partners sections

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,6 +4,8 @@
 
 // components
 @import './components/header';
+@import './components/partners';
 @import './components/home/hero';
 @import './components/home/overview';
 @import './components/home/features';
+@import './components/home/strength';
