--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,3 +9,4 @@
 @import './components/home/overview';
 @import './components/home/features';
 @import './components/home/strength';
+@import './components/home/insight';
