--- a/src/assets/scss/components/home/strength.scss
+++ b/src/assets/scss/components/home/strength.scss
@@ -44,7 +44,7 @@
             }
 
             @include tablet {
-                margin-right: 0;
+                margin: 0;
             }
 
             &::after {
