--- a/src/assets/scss/components/home/overview.scss
+++ b/src/assets/scss/components/home/overview.scss
@@ -23,7 +23,7 @@
         max-width: 660px;
         font-weight: 500;
         line-height: 150%;
-        color: #7e8492;
+        color: var(--neutral-color-150);
 
         @include tablet {
             margin-bottom: 60px;
@@ -65,7 +65,7 @@
         &-descr {
             font-weight: 500;
             line-height: 162%;
-            color: #7e8492;
+            color: var(--neutral-color-150);
         }
     }
 
