--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,3 +10,4 @@
 @import './components/home/features';
 @import './components/home/strength';
 @import './components/home/insight';
+@import './components/home/testimonials';
