--- a/src/assets/scss/components/home/overview.scss
+++ b/src/assets/scss/components/home/overview.scss
@@ -1,6 +1,6 @@
 .overview {
     padding: 100px 0;
-    background-color: var(--overview-color-70);
+    background-color: var(--black-bg-color-70);
 
     @include tablet {
         text-align: center;
