--- a/src/assets/scss/base/vars.scss
+++ b/src/assets/scss/base/vars.scss
@@ -4,6 +4,7 @@
     --neutral-color-20: #f5f5f5;
     --neutral-color-30: #ededed;
     --neutral-color-40: #ced1d8;
+    --neutral-color-50:  #afb3bb;
     --neutral-color-60: #18181d;
     --neutral-color-100: #1d1e25;
     --neutral-color-120: #828282;
@@ -21,8 +22,8 @@
     --logo-color-text: #101010;
     --logo-color-circle: #101010;
 
-    // overview color
-    --overview-color-70: #1d1e25;
+    // black bg color
+    --black-bg-color-70: #1d1e25;
 
     // container
     --container-padding-calc: 15px;
@@ -64,6 +65,6 @@
     // success colors
     --sucess-color-70: #e2f8f033;
 
-    // overview color
-    --overview-color-70: #18181d;
+    // black bg color
+    --black-bg-color-70: #18181d;
 }
