--- a/src/assets/scss/base/vars.scss
+++ b/src/assets/scss/base/vars.scss
@@ -4,47 +4,50 @@
     --neutral-color-20: #f5f5f5;
     --neutral-color-30: #ededed;
     --neutral-color-40: #ced1d8;
-    --neutral-color-50:  #afb3bb;
+    --neutral-color-50: #afb3bb;
     --neutral-color-60: #18181d;
+    --neutral-color-90: #161a34;
     --neutral-color-100: #1d1e25;
     --neutral-color-120: #828282;
     --neutral-color-130: #d9d9d9;
     --neutral-color-140: #000;
     --neutral-color-150: #7e8492;
-
+    
     // primary colors
+    --primary-color-30: #1463ff;
     --primary-color-50: #4e7ddb;
-
+    --primary-color-60: #4b628f;
+    
     // success colors
     --sucess-color-70: #e2f8f0b3;
-
+    
     // logo colors
     --logo-color-text: #101010;
     --logo-color-circle: #101010;
-
+    
     // black bg color
     --black-bg-color-70: #1d1e25;
-
+    
     // container
     --container-padding-calc: 15px;
     --container-padding: 0 var(--container-padding-calc);
     --container-width: 1200px;
-
+    
     @include mini-desktop {
         --container-width: 1000px;
     }
-
+    
     @include tablet {
         --container-width: 860px;
     }
-
+    
     @include mobile {
         --container-width: 480px;
     }
-
+    
     // transition
     --transition: 0.2s ease-in-out;
-
+    
     // z-index
     --z-index-0: -1;
     --z-index-1: 1;
@@ -55,16 +58,18 @@
 
 [data-theme='dark'] {
     --neutral-color-10: #1d1e25;
+    --neutral-color-90: #18181d;
     --neutral-color-100: #fff;
     --neutral-color-140: #fff;
 
+    
     // logo colors
     --logo-color-text: #fff;
     --logo-color-circle: #343542;
-
+    
     // success colors
     --sucess-color-70: #e2f8f033;
-
+    
     // black bg color
     --black-bg-color-70: #18181d;
 }
