Created contact:hero and added cnotact:partners

--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -54,6 +54,11 @@
                             >Pricing</a
                         >
                     </li>
+                    <li class="nav__item">
+                        <a href="./contact" class="nav__link text-p-default"
+                            >Contact</a
+                        >
+                    </li>
                 </ul>
             </nav>
             <label class="header__switcher">
