Fixed links and fonts

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -9,11 +9,11 @@
                     ready to help
                 </p>
             </div>
-            <a href="#" class="footer__btn button-form">Try for free</a>
+            <a href="/coca/contact.html#get-started" class="footer__btn button-form">Try for free</a>
         </div>
         <div class="footer__body">
             <div class="footer__body-info">
-                <a href="/" class="footer__body-logo">
+                <a href="/coca/" class="footer__body-logo">
                     <img
                         loading="lazy"
                         src="./assets/icons/light-logo-svg.svg"
@@ -36,7 +36,7 @@
                         <ul class="footer__sublist">
                             <li class="footer__subitem">
                                 <a
-                                    href="/about.html"
+                                    href="/coca/about.html"
                                     class="footer__subitem-link text-p-default text-p-default"
                                 >
                                     About
@@ -44,7 +44,7 @@
                             </li>
                             <li class="footer__subitem">
                                 <a
-                                    href="/pricing.html"
+                                    href="/coca/pricing.html"
                                     class="footer__subitem-link text-p-default text-p-default"
                                 >
                                     Pricing
@@ -52,7 +52,7 @@
                             </li>
                             <li class="footer__subitem">
                                 <a
-                                    href="/jobs.html"
+                                    href="/coca/jobs.html"
                                     class="footer__subitem-link text-p-default text-p-default"
                                 >
                                     Jobs
@@ -60,7 +60,7 @@
                             </li>
                             <li class="footer__subitem">
                                 <a
-                                    href="/blog.html"
+                                    href="/coca/blog.html"
                                     class="footer__subitem-link text-p-default text-p-default"
                                 >
                                     Blog
