--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -2,7 +2,7 @@
 <header class="header">
     <h1 class="hidden">Coca - Digital Marketting Website. {=$title} page</h1>
     <div class="container header__container">
-        <a href="/" class="header__logo" aria-label="Home page">
+        <a href="/coca/" class="header__logo" aria-label="Home page">
             <svg
                 width="140"
                 height="66"
@@ -37,25 +37,25 @@
             <nav class="header__nav nav">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="/" class="nav__link text-p-default">Home</a>
+                        <a href="/coca/" class="nav__link text-p-default">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a href="./about" class="nav__link text-p-default"
+                        <a href="/coca/about.html" class="nav__link text-p-default"
                             >About</a
                         >
                     </li>
                     <li class="nav__item">
-                        <a href="./blog" class="nav__link text-p-default"
+                        <a href="/coca/blog.html" class="nav__link text-p-default"
                             >Blog</a
                         >
                     </li>
                     <li class="nav__item">
-                        <a href="./pricing" class="nav__link text-p-default"
+                        <a href="/coca/pricing.html" class="nav__link text-p-default"
                             >Pricing</a
                         >
                     </li>
                     <li class="nav__item">
-                        <a href="./contact" class="nav__link text-p-default"
+                        <a href="/coca/contact.html" class="nav__link text-p-default"
                             >Contact</a
                         >
                     </li>
