--- a/src/assets/scss/base/vars.scss
+++ b/src/assets/scss/base/vars.scss
@@ -7,6 +7,7 @@
     --neutral-color-50: #afb3bb;
     --neutral-color-60: #18181d;
     --neutral-color-90: #161a34;
+    --neutral-color-95: #161a34;
     --neutral-color-100: #1d1e25;
     --neutral-color-120: #828282;
     --neutral-color-130: #d9d9d9;
@@ -59,6 +60,7 @@
 [data-theme='dark'] {
     --neutral-color-10: #1d1e25;
     --neutral-color-90: #18181d;
+    --neutral-color-95: #fff;
     --neutral-color-100: #fff;
     --neutral-color-140: #fff;
 
