--- a/src/assets/scss/components/about/hero.scss
+++ b/src/assets/scss/components/about/hero.scss
@@ -9,10 +9,7 @@
         position: relative;
 
         @include tablet {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            @include flex-column-all-center;
         }
     }
 
