Created about:staff section

--- a/src/assets/scss/about.scss
+++ b/src/assets/scss/about.scss
@@ -6,4 +6,5 @@
 @import './components/header';
 @import './components/about/hero';
 @import './components/about/growth';
+@import './components/about/staff';
 @import './components/footer';
