Created about:invitation section

--- a/src/assets/scss/about.scss
+++ b/src/assets/scss/about.scss
@@ -7,4 +7,5 @@
 @import './components/about/hero';
 @import './components/about/growth';
 @import './components/about/staff';
+@import './components/about/invitation';
 @import './components/footer';
