Created blog:guides section

--- a/src/assets/scss/blog.scss
+++ b/src/assets/scss/blog.scss
@@ -5,4 +5,5 @@
 // components
 @import './components/header';
 @import './components/blog/activity';
+@import './components/blog/guides';
 @import './components/footer';
