Created blog:articles section

--- a/src/assets/scss/blog.scss
+++ b/src/assets/scss/blog.scss
@@ -6,4 +6,5 @@
 @import './components/header';
 @import './components/blog/activity';
 @import './components/blog/guides';
+@import './components/blog/articles';
 @import './components/footer';
